Revert "feat(gallery): improve the ui of the gallery"
This reverts commit 4b82b075366c95defb4f96ab96d650d62f97ab7b.

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -50,222 +50,46 @@
           </p>
         </header>
 
-        <section class="gallery-featured" aria-label="Featured highlights">
-          <div class="gallery-featured__header">
-            <h2 class="gallery-featured__title">Featured highlights</h2>
-            <div class="gallery-featured__controls" aria-label="Carousel controls">
-              <button class="btn btn--ghost" type="button" data-carousel-prev aria-label="Previous item">
-                Previous
-              </button>
-              <button class="btn btn--ghost" type="button" data-carousel-next aria-label="Next item">
-                Next
-              </button>
-            </div>
-          </div>
-
-          <div class="gallery-carousel" data-carousel>
-            <div
-              class="gallery-carousel__track"
-              data-carousel-track
-              tabindex="0"
-              role="group"
-              aria-roledescription="carousel"
-              aria-label="Featured gallery items"
-            >
-              <figure class="card gallery-slide">
-                <div class="card__header gallery-slide__header">
-                  <div class="gallery-slide__media">
-                    <img
-                      class="gallery-slide__img"
-                      src="https://picsum.photos/seed/classical-dance/1200/675"
-                      alt="Classical Dance"
-                      loading="lazy"
-                      decoding="async"
-                    />
-                  </div>
-                  <figcaption class="gallery-slide__caption">Classical Dance</figcaption>
-                </div>
-              </figure>
-              <figure class="card gallery-slide">
-                <div class="card__header gallery-slide__header">
-                  <div class="gallery-slide__media">
-                    <img
-                      class="gallery-slide__img"
-                      src="https://picsum.photos/seed/heritage-sites/1200/675"
-                      alt="Heritage Sites"
-                      loading="lazy"
-                      decoding="async"
-                    />
-                  </div>
-                  <figcaption class="gallery-slide__caption">Heritage Sites</figcaption>
-                </div>
-              </figure>
-              <figure class="card gallery-slide">
-                <div class="card__header gallery-slide__header">
-                  <div class="gallery-slide__media">
-                    <img
-                      class="gallery-slide__img"
-                      src="https://picsum.photos/seed/handicrafts/1200/675"
-                      alt="Handicrafts"
-                      loading="lazy"
-                      decoding="async"
-                    />
-                  </div>
-                  <figcaption class="gallery-slide__caption">Handicrafts</figcaption>
-                </div>
-              </figure>
-              <figure class="card gallery-slide">
-                <div class="card__header gallery-slide__header">
-                  <div class="gallery-slide__media">
-                    <img
-                      class="gallery-slide__img"
-                      src="https://picsum.photos/seed/festivals/1200/675"
-                      alt="Festivals"
-                      loading="lazy"
-                      decoding="async"
-                    />
-                  </div>
-                  <figcaption class="gallery-slide__caption">Festivals</figcaption>
-                </div>
-              </figure>
-              <figure class="card gallery-slide">
-                <div class="card__header gallery-slide__header">
-                  <div class="gallery-slide__media">
-                    <img
-                      class="gallery-slide__img"
-                      src="https://picsum.photos/seed/museum-collections/1200/675"
-                      alt="Museum Collections"
-                      loading="lazy"
-                      decoding="async"
-                    />
-                  </div>
-                  <figcaption class="gallery-slide__caption">Museum Collections</figcaption>
-                </div>
-              </figure>
-            </div>
-          </div>
-        </section>
-
         <section class="gallery-section" aria-label="Gallery items">
           <div class="gallery-grid">
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/classical-dance-grid/1200/900"
-                  alt="Classical Dance"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Classical Dance</figcaption>
             </figure>
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/folk-art-grid/1200/900"
-                  alt="Folk Art"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Folk Art</figcaption>
             </figure>
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/handicrafts-grid/1200/900"
-                  alt="Handicrafts"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Handicrafts</figcaption>
             </figure>
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/heritage-sites-grid/1200/900"
-                  alt="Heritage Sites"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Heritage Sites</figcaption>
             </figure>
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/traditional-music-grid/1200/900"
-                  alt="Traditional Music"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Traditional Music</figcaption>
             </figure>
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/festivals-grid/1200/900"
-                  alt="Festivals"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Festivals</figcaption>
             </figure>
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/museum-collections-grid/1200/900"
-                  alt="Museum Collections"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Museum Collections</figcaption>
             </figure>
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/manuscripts-grid/1200/900"
-                  alt="Manuscripts"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Manuscripts</figcaption>
             </figure>
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/architecture-grid/1200/900"
-                  alt="Architecture"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Architecture</figcaption>
             </figure>
             <figure class="gallery-item">
-              <div class="gallery-item__media">
-                <img
-                  class="gallery-item__img"
-                  src="https://picsum.photos/seed/craft-workshops-grid/1200/900"
-                  alt="Craft Workshops"
-                  loading="lazy"
-                  decoding="async"
-                />
-              </div>
+              <div class="gallery-item__media" aria-hidden="true"></div>
               <figcaption class="gallery-item__caption">Craft Workshops</figcaption>
             </figure>
           </div>
@@ -274,6 +98,5 @@
     </main>
 
     <script src="../scripts/app.js" defer></script>
-    <script src="../scripts/pages/gallery.js" defer></script>
   </body>
 </html>
