--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 		<!-- Design system (tokens + shared components) -->
 		<link rel="stylesheet" href="styles/design-system/variables.css" />
 		<link rel="stylesheet" href="styles/design-system/components.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="styles/globals.css" />
 		<link rel="stylesheet" href="styles/pages/home.css" />
 	</head>
@@ -132,6 +137,106 @@
 						<h2 class="home-section__title">Gallery</h2>
 						<a class="home-link" href="/gallery">Open the gallery</a>
 					</div>
+
+					<div class="home-gallery-carousel">
+						<div id="homeGalleryCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Gallery carousel">
+							<div class="carousel-indicators">
+								<button
+									type="button"
+									data-bs-target="#homeGalleryCarousel"
+									data-bs-slide-to="0"
+									class="active"
+									aria-current="true"
+									aria-label="Slide 1"
+								></button>
+								<button
+									type="button"
+									data-bs-target="#homeGalleryCarousel"
+									data-bs-slide-to="1"
+									aria-label="Slide 2"
+								></button>
+								<button
+									type="button"
+									data-bs-target="#homeGalleryCarousel"
+									data-bs-slide-to="2"
+									aria-label="Slide 3"
+								></button>
+								<button
+									type="button"
+									data-bs-target="#homeGalleryCarousel"
+									data-bs-slide-to="3"
+									aria-label="Slide 4"
+								></button>
+							</div>
+
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<img
+										class="d-block w-100"
+										src="https://picsum.photos/seed/home-gallery-1/1600/900"
+										alt="Classical Dance"
+										loading="lazy"
+										decoding="async"
+									/>
+									<div class="carousel-caption">
+										<h3>Classical Dance</h3>
+										<p>Celebrating performance traditions across regions.</p>
+									</div>
+								</div>
+
+								<div class="carousel-item">
+									<img
+										class="d-block w-100"
+										src="https://picsum.photos/seed/home-gallery-2/1600/900"
+										alt="Heritage Sites"
+										loading="lazy"
+										decoding="async"
+									/>
+									<div class="carousel-caption">
+										<h3>Heritage Sites</h3>
+										<p>Landmarks that connect history and identity.</p>
+									</div>
+								</div>
+
+								<div class="carousel-item">
+									<img
+										class="d-block w-100"
+										src="https://picsum.photos/seed/home-gallery-3/1600/900"
+										alt="Crafts and Handicrafts"
+										loading="lazy"
+										decoding="async"
+									/>
+									<div class="carousel-caption">
+										<h3>Crafts and Handicrafts</h3>
+										<p>Artisan skills and materials passed through generations.</p>
+									</div>
+								</div>
+
+								<div class="carousel-item">
+									<img
+										class="d-block w-100"
+										src="https://picsum.photos/seed/home-gallery-4/1600/900"
+										alt="Festivals"
+										loading="lazy"
+										decoding="async"
+									/>
+									<div class="carousel-caption">
+										<h3>Festivals</h3>
+										<p>Community celebrations of music, color, and craft.</p>
+									</div>
+								</div>
+							</div>
+
+							<button class="carousel-control-prev" type="button" data-bs-target="#homeGalleryCarousel" data-bs-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="visually-hidden">Previous</span>
+							</button>
+							<button class="carousel-control-next" type="button" data-bs-target="#homeGalleryCarousel" data-bs-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="visually-hidden">Next</span>
+							</button>
+						</div>
+					</div>
 					<div class="home-gallery">
 						<div class="home-gallery__tile" role="img" aria-label="Gallery image placeholder"></div>
 						<div class="home-gallery__tile" role="img" aria-label="Gallery image placeholder"></div>
@@ -165,6 +270,7 @@
 			</div>
 		</footer>
 
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer crossorigin="anonymous"></script>
 		<script src="scripts/app.js" defer></script>
 	</body>
 </html>
