feat(home): add an image to the hero

--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
 							</button>
 						</div>
 					</div>
-					<div class="home-gallery">
+					<!-- <div class="home-gallery">
 						<div class="home-gallery__tile" role="img" aria-label="Gallery image placeholder"></div>
 						<div class="home-gallery__tile" role="img" aria-label="Gallery image placeholder"></div>
 						<div class="home-gallery__tile" role="img" aria-label="Gallery image placeholder"></div>
 						<div class="home-gallery__tile" role="img" aria-label="Gallery image placeholder"></div>
 					</div>
-				</div>
+				</div> -->
 			</section>
 		</main>
 
