--- a/gallery/index.html
+++ b/gallery/index.html
@@ -7,6 +7,11 @@
 
     <link rel="stylesheet" href="../styles/design-system/variables.css" />
     <link rel="stylesheet" href="../styles/design-system/components.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../styles/globals.css" />
     <link rel="stylesheet" href="../styles/pages/gallery.css" />
   </head>
@@ -41,14 +46,72 @@
     </nav>
 
     <main class="gallery">
+    <section class="gallery-hero" aria-label="Gallery hero">
+    <div
+      id="galleryHeroCarousel"
+      class="carousel slide"
+      data-bs-ride="carousel"
+      data-bs-interval="4000"
+      data-bs-pause="false"
+      data-bs-touch="false"
+      aria-label="Gallery carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100 gallery-hero__img"
+            src="https://culture.gov.in/files/styles/photo_video_gallery_images/public/photo_gallery_album_images/1001426547_0.jpg?itok=J5SHaI83"
+            alt="Cultural gallery highlight"
+            loading="lazy"
+            decoding="async"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 gallery-hero__img"
+            src="https://culture.gov.in/files/styles/photo_video_gallery_images/public/photo_gallery_images/DSC_7787_0.JPG?itok=miw7DTlW"
+            alt="Cultural gallery highlight"
+            loading="lazy"
+            decoding="async"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 gallery-hero__img"
+            src="https://culture.gov.in/files/styles/photo_video_gallery_images/public/photo_gallery_images/WhatsApp%20Image%202025-11-29%20at%204.13.23%20PM%20%281%29.jpeg?itok=3rRKlmE7"
+            alt="Cultural gallery highlight"
+            loading="lazy"
+            decoding="async"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100 gallery-hero__img"
+            src="https://culture.gov.in/files/styles/photo_video_gallery_images/public/photo_gallery_images/WhatsApp%20Image%202025-10-06%20at%2012.25.44%20PM.jpeg?itok=TSu3u5CG"
+            alt="Cultural gallery highlight"
+            loading="lazy"
+            decoding="async"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="gallery-hero__content">
+      <div class="gallery-hero__content-inner">
+        <h1 class="gallery-hero__title">Gallery</h1>
+        <p class="gallery-hero__subtitle text-muted">Cultural forms, craft, performance, and heritage moments.</p>
+      </div>
+    </div>
+    </section>
+
       <div class="gallery-shell">
-        <header class="gallery-header">
-          <h1>Cultural Gallery</h1>
+        <!-- <header class="gallery-header">
+          <h2>Cultural Gallery</h2>
           <p class="gallery-intro text-muted">
             A curated visual overview of cultural forms and heritage themes. Placeholders are used here for layout
             and presentation.
           </p>
-        </header>
+        </header> -->
 
         <section class="gallery-section" aria-label="Gallery items">
           <div class="gallery-grid">
@@ -97,6 +160,11 @@
       </div>
     </main>
 
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    defer
+    crossorigin="anonymous"
+  ></script>
     <script src="../scripts/app.js" defer></script>
   </body>
 </html>
