--- a/schemes/index.html
+++ b/schemes/index.html
@@ -44,6 +44,31 @@
       <h1>Schemes</h1>
     </main>
 
+    <div class="accessibility-backdrop" aria-hidden="true" data-open="false"></div>
+    <div
+      class="accessibility-modal"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="accessibility-controls-title"
+      data-open="false"
+    >
+      <h2 id="accessibility-controls-title">Accessibility Controls</h2>
+
+      <div class="accessibility-card">
+        <h3>High Contrast</h3>
+        <p class="text-muted">Increase contrast for improved readability.</p>
+      </div>
+
+      <div class="accessibility-card">
+        <h3>Invert Colors</h3>
+        <p class="text-muted">Invert foreground and background colors.</p>
+      </div>
+
+      <div class="accessibility-actions">
+        <button class="btn btn--secondary" type="button">Close</button>
+      </div>
+    </div>
+
     <script src="../scripts/app.js" defer></script>
   </body>
 </html>
