feat(accessibilty): Add high contrast dark mode token overrides under accessibility.css using only existing semantic CSS variables

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles/globals.css" />
     <link rel="stylesheet" href="styles/pages/home.css" />
   </head>
-  <body>
+  <body class="" >
     <!-- Canonical global navbar structure (to be reused across pages) -->
     <nav class="site-nav" aria-label="Primary">
       <div class="site-nav__inner">
