refactor(a11y): harden accessibility modal and dark-contrast theming

--- a/events/national-heritage-week/index.html
+++ b/events/national-heritage-week/index.html
@@ -105,12 +105,12 @@
 		>
 			<h2 id="accessibility-controls-title">Accessibility Controls</h2>
 
-			<div class="accessibility-card">
+			<div class="accessibility-card" data-a11y-action="high-contrast">
 				<h3>High Contrast</h3>
 				<p class="text-muted">Increase contrast for improved readability.</p>
 			</div>
 
-			<div class="accessibility-card">
+			<div class="accessibility-card" data-a11y-action="invert">
 				<h3>Invert Colors</h3>
 				<p class="text-muted">Invert foreground and background colors.</p>
 			</div>
