--- a/schemes/index.html
+++ b/schemes/index.html
@@ -54,12 +54,12 @@
     >
       <h2 id="accessibility-controls-title">Accessibility Controls</h2>
 
-      <div class="accessibility-card">
+      <div class="accessibility-card" data-a11y-action="high-contrast">
         <h3>High Contrast</h3>
         <p class="text-muted">Increase contrast for improved readability.</p>
       </div>
 
-      <div class="accessibility-card">
+      <div class="accessibility-card" data-a11y-action="invert">
         <h3>Invert Colors</h3>
         <p class="text-muted">Invert foreground and background colors.</p>
       </div>
