feat(accessibility): add the accessibility scribt and nav buton globally

--- a/events/index.html
+++ b/events/index.html
@@ -17,6 +17,15 @@
         <a class="site-nav__brand" href="/">Ministry of Culture, Govt. of India</a>
 
         <button
+          type="button"
+          class="site-nav__a11y"
+          data-a11y-toggle
+          aria-label="Accessibility options"
+        >
+          Ass
+        </button>
+
+        <button
           class="site-nav__toggle"
           type="button"
           aria-label="Toggle navigation menu"
@@ -304,6 +313,7 @@
       </div>
     </div>
 
+    <script src="/scripts/accessibility.js" defer></script>
     <script src="../scripts/app.js" defer></script>
     <script src="../scripts/pages/events.js" defer></script>
   </body>
