--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         >
 
         <button
+          type="button"
+          class="site-nav__a11y"
+          data-a11y-toggle
+          aria-label="Accessibility options"
+        >
+          Ass
+        </button>
+
+        <button
           class="site-nav__toggle"
           type="button"
           aria-label="Toggle navigation menu"
@@ -409,6 +418,7 @@
       defer
       crossorigin="anonymous"
     ></script>
+    <script src="/scripts/accessibility.js" defer></script>
     <script src="scripts/app.js" defer></script>
   </body>
 </html>
