--- a/pages/programs.html
+++ b/pages/programs.html
@@ -17,6 +17,15 @@
 				<a class="site-nav__brand" href="/">Ministry of Culture, Govt. of India</a>
 
 				<button
+					type="button"
+					class="site-nav__a11y"
+					data-a11y-toggle
+					aria-label="Accessibility options"
+				>
+					Ass
+				</button>
+
+				<button
 					class="site-nav__toggle"
 					type="button"
 					aria-label="Toggle navigation menu"
@@ -44,6 +53,7 @@
 			<h1>Programs</h1>
 		</main>
 
+		<script src="/scripts/accessibility.js" defer></script>
 		<script src="../scripts/app.js" defer></script>
 	</body>
 </html>
