--- a/gallery/index.html
+++ b/gallery/index.html
@@ -24,15 +24,6 @@
         >
 
         <button
-          type="button"
-          class="site-nav__a11y"
-          data-a11y-toggle
-          aria-label="Accessibility options"
-        >
-          Ass
-        </button>
-
-        <button
           class="site-nav__toggle"
           type="button"
           aria-label="Toggle navigation menu"
@@ -67,6 +58,22 @@
             </li>
           </ul>
         </div>
+
+        <span class="site-nav__divider" aria-hidden="true"></span>
+
+        <button
+          type="button"
+          class="site-nav__a11y"
+          data-a11y-toggle
+          aria-label="Accessibility options"
+        >
+          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="12" cy="7" r="3" stroke="currentColor" stroke-width="2" />
+            <path d="M5 21c1.5-4 4-6 7-6s5.5 2 7 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+            <path d="M4 12h5" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+            <path d="M15 12h5" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+          </svg>
+        </button>
       </div>
     </nav>
 
