--- a/index.html
+++ b/index.html
@@ -25,15 +25,6 @@
         >
 
         <button
-          type="button"
-          class="site-nav__a11y"
-          data-a11y-toggle
-          aria-label="Accessibility options"
-        >
-          Ass
-        </button>
-
-        <button
           class="site-nav__toggle"
           type="button"
           aria-label="Toggle navigation menu"
@@ -68,6 +59,22 @@
             </li>
           </ul>
         </div>
+
+        <span class="site-nav__divider" aria-hidden="true"></span>
+
+        <button
+          type="button"
+          class="site-nav__a11y"
+          data-a11y-toggle
+          aria-label="Accessibility options"
+        >
+          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="12" cy="7" r="3" stroke="currentColor" stroke-width="2" />
+            <path d="M5 21c1.5-4 4-6 7-6s5.5 2 7 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+            <path d="M4 12h5" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+            <path d="M15 12h5" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+          </svg>
+        </button>
       </div>
     </nav>
 
@@ -83,7 +90,7 @@
               promote creative traditions.
             </p>
             <div class="home-hero__actions">
-              <a class="btn btn--primary" href="/schemes">Explore Schemes</a>
+              <a class="btn btn--primary" href="/about">About us</a>
             </div>
           </div>
         </div>
@@ -147,7 +154,7 @@
                 <h3 class="home-card__title">Museums & Collections</h3>
               </div>
               <div class="card__content">
-                <p class="text-muted">
+                <p class="text-muted-foreground">
                   Explore nationally significant artefacts and archives.
                 </p>
               </div>
@@ -157,7 +164,7 @@
                 <h3 class="home-card__title">Performing Arts</h3>
               </div>
               <div class="card__content">
-                <p class="text-muted">
+                <p class="text-muted-foreground">
                   Support for music, dance, theatre, and folk traditions.
                 </p>
               </div>
@@ -167,7 +174,7 @@
                 <h3 class="home-card__title">Heritage Sites</h3>
               </div>
               <div class="card__content">
-                <p class="text-muted">
+                <p class="text-muted-foreground">
                   Conservation initiatives for monuments and heritage precincts.
                 </p>
               </div>
@@ -177,7 +184,7 @@
                 <h3 class="home-card__title">Grants & Fellowships</h3>
               </div>
               <div class="card__content">
-                <p class="text-muted">
+                <p class="text-muted-foreground">
                   Opportunities that encourage research and creative work.
                 </p>
               </div>
@@ -196,7 +203,7 @@
             <li class="home-list__item card">
               <div class="card__content">
                 <strong>Public Lectures</strong>
-                <span class="text-muted"
+                <span class="text-muted-foreground"
                   >Talks and discussions on heritage and the arts.</span
                 >
               </div>
@@ -204,7 +211,7 @@
             <li class="home-list__item card">
               <div class="card__content">
                 <strong>Exhibitions</strong>
-                <span class="text-muted"
+                <span class="text-muted-foreground"
                   >Curated displays from museums and cultural
                   institutions.</span
                 >
@@ -213,7 +220,7 @@
             <li class="home-list__item card">
               <div class="card__content">
                 <strong>Festivals</strong>
-                <span class="text-muted"
+                <span class="text-muted-foreground"
                   >Celebrations showcasing regional traditions and crafts.</span
                 >
               </div>
@@ -272,7 +279,7 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="https://picsum.photos/seed/home-gallery-1/1600/900"
+                    src="/assets/images/home/classical-dance.png"
                     alt="Classical Dance"
                     loading="lazy"
                     decoding="async"
@@ -286,7 +293,7 @@
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://picsum.photos/seed/home-gallery-2/1600/900"
+                    src="/assets/images/home/heritage.jpg"
                     alt="Heritage Sites"
                     loading="lazy"
                     decoding="async"
@@ -300,7 +307,7 @@
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://picsum.photos/seed/home-gallery-3/1600/900"
+                    src="/assets/images/home/crafts.jpg"
                     alt="Crafts and Handicrafts"
                     loading="lazy"
                     decoding="async"
@@ -316,7 +323,7 @@
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://picsum.photos/seed/home-gallery-4/1600/900"
+                    src="/assets/images/home/festivals.jpg"
                     alt="Festivals"
                     loading="lazy"
                     decoding="async"
@@ -364,7 +371,7 @@
           <strong class="site-footer__title"
             >Ministry of Culture, Government of India</strong
           >
-          <p class="site-footer__desc text-muted">
+          <p class="site-footer__desc text-muted-foreground">
             Official information and public resources for citizens and
             institutions.
           </p>
@@ -382,7 +389,7 @@
       </div>
 
       <div class="home-shell site-footer__bottom">
-        <p class="text-small text-muted">
+        <p class="text-small text-muted-foreground">
           © 2026 Ministry of Culture, Government of India
         </p>
       </div>
@@ -400,12 +407,12 @@
 
       <div class="accessibility-card" data-a11y-action="high-contrast">
         <h3>High Contrast</h3>
-        <p class="text-muted">Increase contrast for improved readability.</p>
+        <p class="text-muted-foreground">Increase contrast for improved readability.</p>
       </div>
 
       <div class="accessibility-card" data-a11y-action="invert">
         <h3>Invert Colors</h3>
-        <p class="text-muted">Invert foreground and background colors.</p>
+        <p class="text-muted-foreground">Invert foreground and background colors.</p>
       </div>
 
       <div class="accessibility-actions">
