--- a/pages/programs.html
+++ b/pages/programs.html
@@ -17,15 +17,6 @@
 				<a class="site-nav__brand" href="/">Ministry of Culture, Govt. of India</a>
 
 				<button
-					type="button"
-					class="site-nav__a11y"
-					data-a11y-toggle
-					aria-label="Accessibility options"
-				>
-					Ass
-				</button>
-
-				<button
 					class="site-nav__toggle"
 					type="button"
 					aria-label="Toggle navigation menu"
@@ -40,12 +31,28 @@
 						<li class="site-nav__item"><a class="site-nav__link" href="/">Home</a></li>
 						<li class="site-nav__item"><a class="site-nav__link" href="/about">About</a></li>
 						<li class="site-nav__item"><a class="site-nav__link" href="/culture">Culture</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="/schemes">Schemes</a></li>
+						<!-- <li class="site-nav__item"><a class="site-nav__link" href="/schemes">Schemes</a></li> -->
 						<li class="site-nav__item"><a class="site-nav__link" href="/events">Events</a></li>
 						<li class="site-nav__item"><a class="site-nav__link" href="/gallery">Gallery</a></li>
 						<li class="site-nav__item"><a class="site-nav__link" href="/contact">Contact</a></li>
 					</ul>
 				</div>
+
+				<span class="site-nav__divider" aria-hidden="true"></span>
+
+				<button
+					type="button"
+					class="site-nav__a11y"
+					data-a11y-toggle
+					aria-label="Accessibility options"
+				>
+					<svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+						<circle cx="12" cy="7" r="3" stroke="currentColor" stroke-width="2" />
+						<path d="M5 21c1.5-4 4-6 7-6s5.5 2 7 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+						<path d="M4 12h5" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+						<path d="M15 12h5" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+					</svg>
+				</button>
 			</div>
 		</nav>
 
