--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@
 						<li class="site-nav__item"><a class="site-nav__link" href="/">Home</a></li>
 						<li class="site-nav__item"><a class="site-nav__link" href="/about">About</a></li>
 						<li class="site-nav__item"><a class="site-nav__link" href="/culture">Culture</a></li>
-						<!-- <!-- <li class="site-nav__item"><a class="site-nav__link" href="/schemes">Schemes</a></li> --> -->
+						<!-- <!-- <li class="site-nav__item"><a class="site-nav__link" href="/schemes">Schemes</a></li> -->
 						<li class="site-nav__item"><a class="site-nav__link" href="/events">Events</a></li>
 						<li class="site-nav__item"><a class="site-nav__link" href="/gallery">Gallery</a></li>
 						<li class="site-nav__item"><a class="site-nav__link" href="/contact">Contact</a></li>
