--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <li class="site-nav__item">
               <a class="site-nav__link" href="/culture">Culture</a>
             </li>
-            <li class="site-nav__item">
+            <!-- <li class="site-nav__item">
               <a class="site-nav__link" href="/schemes">Schemes</a>
-            </li>
+            </li> -->
             <li class="site-nav__item">
               <a class="site-nav__link" href="/events">Events</a>
             </li>
