--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <li class="site-nav__item">
               <a class="site-nav__link" href="/">Home</a>
             </li>
-            <li class="site-nav__item">
+            <li class="site-nav__item" >
               <a class="site-nav__link" href="/about">About</a>
             </li>
-            <li class="site-nav__item">
+            <li class="site-nav__item" id="meaw">
               <a class="site-nav__link" href="/culture">Culture</a>
             </li>
             <!-- <li class="site-nav__item">
